<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/interphone_dialog_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="16.0sp" android:textColor="@color/pri_text_color" android:gravity="center" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/interphone_update_firmware" />
    <TextView android:textSize="14.0sp" android:textColor="@color/pri_sub_text_color" android:gravity="center" android:id="@id/tv_content" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/interphone_update_firmware_content1" />
    <com.pri.prizeinterphone.widget.NumberProgressBar android:layout_gravity="center" android:id="@id/update_bar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20.0dip" app:progress_current="0" style="@style/NumberProgressBar_Grace_Yellow" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <Button android:textColor="@drawable/interphone_local_device_id_dialog_button_seletor" android:id="@id/left_bt" android:background="@null" android:layout_width="0.0dip" android:layout_height="48.0dip" android:text="@string/interphone_update_firmware_left_text1" android:layout_weight="1.0" android:textAllCaps="false" />
        <Button android:textColor="@drawable/interphone_local_device_id_dialog_button_seletor" android:id="@id/right_bt" android:background="@null" android:layout_width="0.0dip" android:layout_height="48.0dip" android:text="@string/interphone_update_firmware_right_text1" android:layout_weight="1.0" android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>
